--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,14 @@
 bin/
 target/
 out/*
+
+### MacOS ###
+.DS_Store
+.DS_Store?
+._*
+.AppleDouble
+.LSOverride
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
