--- a/build.gradle
+++ b/build.gradle
@@ -42,4 +42,11 @@ jacocoTestReport {
 		csv.enabled false
 		html.destination file("${buildDir}/jacocoHtml")
 	}
+
+	afterEvaluate {
+		classDirectories = files(classDirectories.files.collect {
+			fileTree(dir: it,
+					exclude: ['com/concrete/challenge/bean/**'])
+		})
+	}
 }
