Coupons API first approach

--- a/api-desafio/pom.xml
+++ b/api-desafio/pom.xml
@@ -1,24 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>cl.concrete</groupId>
-	<artifactId>api-desafio</artifactId>
+	<groupId>cl.concrete.desafio</groupId>
+	<artifactId>ecommerce</artifactId>
+	<name>ecommerce</name>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>${project.name}</name>
-	<url>http://maven.apache.org</url>
+	<description>Concrete ecommerce</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<project.name>api-desafio</project.name>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.6.RELEASE</version>
+		<relativePath/>
 	</parent>
 
 	<dependencies>
@@ -27,26 +27,33 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>2.1.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<!-- <dependency> <groupId>io.github.openfeign</groupId> <artifactId>feign-core</artifactId> 
 			<version>10.1.0</version> </dependency> <dependency> <groupId>io.github.openfeign</groupId> 
 			<artifactId>feign-okhttp</artifactId> <version>10.1.0</version> </dependency> 
 			<dependency> <groupId>io.github.openfeign</groupId> <artifactId>feign-gson</artifactId> 
 			<version>10.1.0</version> </dependency> -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
-		<finalName>${project.name}</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
 				<artifactId>cargo-maven2-plugin</artifactId>
@@ -79,9 +86,7 @@
 							<goal>read-project-properties</goal>
 						</goals>
 						<configuration>
-							<!-- <files> <file>secrets.properties</file> </files> -->
 							<urls>
-								<!-- <url>classpath:secrets.properties</url> -->
 								<url>file:///${project.basedir}/src/main/resources/secrets.properties</url>
 							</urls>
 						</configuration>
@@ -89,6 +94,7 @@
 				</executions>
 			</plugin>
 		</plugins>
+		
 	</build>
 
 </project>
