Categories API first approach and improvements

--- a/api-desafio/src/main/resources/application.properties
+++ b/api-desafio/src/main/resources/application.properties
@@ -2,4 +2,10 @@
 
 spring.profiles.active=@spring.profiles.active@
 
+coupons.webservice.client.endpoint=https://cs-hsa-api-coupons.herokuapp.com
+coupons.webservice.client.service=coupons
 coupons.refresh.time=30000
+
+categories.webservice.client.endpoint=https://cs-hsa-api-categories.herokuapp.com
+categories.webservice.client.service=categories
+categories.refresh.time=30000
