--- a/api-desafio/pom.xml
+++ b/api-desafio/pom.xml
@@ -48,6 +48,16 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>2.1.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.6.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
