--- a/ecommercemobile/pubspec.yaml
+++ b/ecommercemobile/pubspec.yaml
@@ -35,6 +35,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+  - assets/nodisponible.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
