Adding filters & minor improvements.
- Adding filters for specific cases.
.

--- a/java/challenge/src/main/resources/application.properties
+++ b/java/challenge/src/main/resources/application.properties
@@ -7,6 +7,7 @@ coupons.api.src.ws.endpoint=https://cs-hsa-api-coupons.herokuapp.com
 coupons.api.src.ws.get.path=/coupons
 coupons.api.src.ws.name=coupons
 coupons.api.url.path=/coupons
+coupons.api.dt.format=yyyy-MM-dd
 
 #Categories API Source Connection Parameters.
 categories.api.src.ws.endpoint=https://cs-hsa-api-categories.herokuapp.com
