--- a/java/challenge/build.gradle
+++ b/java/challenge/build.gradle
@@ -19,6 +19,8 @@ ext {
 }
 
 dependencies {
+	implementation 'com.google.guava:guava:28.0-jre'
+	implementation 'org.apache.commons:commons-lang3:3.9'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
