Added Swagger documentation
- Added Swagger documentation.

--- a/java/challenge/src/main/resources/application.properties
+++ b/java/challenge/src/main/resources/application.properties
@@ -20,3 +20,38 @@ coupons.api.cache.time=60000
 
 categories.api.cache.name=categories
 categories.api.cache.time=60000
+
+#Swagger Configuration.
+swagger.rest.base.package=cl.accenture.concrete.challenge.rest
+
+#Swagger UI Descriptions.
+
+#coupons.api.doc.name=Coupons API
+#coupons.api.doc.desc=Coupons REST API Calls.
+
+coupons.api.doc.getCoupons.desc=Get all the available coupons.
+coupons.api.doc.getCoupons.notes=This call will return all the coupons, including the expired ones.
+
+coupons.api.doc.getValidCoupons.desc=Get all the valid coupons.
+coupons.api.doc.getValidCoupons.notes=This call will return all the valid coupons, excluding the expired ones.
+
+#categories.api.doc.name=Categories API
+#categories.api.doc.desc=Categories REST API Calls.
+
+categories.api.doc.getCategories.desc=Get all the Category Tree.
+categories.api.doc.getCategories.notes=Get the Category Tree, with all the Categories and Subcategories.
+
+categories.api.doc.getTop5Categories.desc=Get the Top 5 Categories.
+categories.api.doc.getTop5Categories.notes=An implementation of the Top Categories. Get a list of the 5 most relevant Categories, in descending order.
+
+categories.api.doc.getTopCategories.desc=Get the Top X Categories.
+categories.api.doc.getTopCategories.notes=Gets a list of the most revant Categories, in descending order.
+categories.api.doc.getTopCategories.param.total.desc=Required. Add the relevant number of categories you want to bring. With 0 or invalid value will bring 0 results.
+
+categories.api.doc.getNoTop5Categories.desc=Get the Categories that are not part of the Top 5 categories.
+categories.api.doc.getNoTop5Categories.notes=An implementation of the No Top Categories. Get all the Categories that aren't part of the most revelevants, in descending order.
+
+categories.api.doc.getNoTopCategories.desc=Get the Categories that are not part of the Top X categories.
+categories.api.doc.getNoTopCategories.notes=Get all the Categories that aren't part of the most revelevants, in descending order.
+categories.api.doc.getNoTopCategories.param.total.desc=Required. Add the relevant number of categories you want to ignore. With 0 will bring all the categories as list. With an invalid value will bring 0 results.
+
