--- a/java/challenge/build.gradle
+++ b/java/challenge/build.gradle
@@ -20,6 +20,8 @@ ext {
 }
 
 dependencies {
+	implementation "io.springfox:springfox-swagger-ui:2.9.2"
+	implementation "io.springfox:springfox-swagger2:2.9.2"
 	implementation 'com.google.guava:guava:28.0-jre'
 	implementation 'org.apache.commons:commons-lang3:3.9'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
