--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./tomcat/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml
       # The configuration below is only for verification.
-      #- ./tomcat/manager.xml:/usr/local/tomcat/conf/Catalina/localhost/manager.xml 
+      - ./tomcat/manager.xml:/usr/local/tomcat/conf/Catalina/localhost/manager.xml 
     networks:
       - concrete
 
