--- a/docker/jenkins/Dockerfile
+++ b/docker/jenkins/Dockerfile
@@ -6,6 +6,9 @@ COPY jobs /usr/share/jenkins/ref/jobs
 COPY workspace /usr/share/jenkins/ref/workspace
 COPY credentials.xml /usr/share/jenkins/ref/credentials.xml
 
+# Start-up scripts to set number of executors and creating the admin user
+COPY addTomcatCredential.groovy /usr/share/jenkins/ref/init.groovy.d/
+
 # Add/Remove  the plugins you want  
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
@@ -19,5 +22,6 @@ ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 
 # Start-up scripts to set number of executors and creating the admin user
 COPY default-user.groovy /usr/share/jenkins/ref/init.groovy.d/
+
 
 VOLUME $JENKINS_HOME
