--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.profiles.active=local
 server.port=8080
 server.servlet.context-path=/backend
 url.api.categoria=https://cs-hsa-api-categories.herokuapp.com/categories
 url.api.cupons=https://cs-hsa-api-coupons.herokuapp.com/coupons
 
-logging.level.web = TRACE
-logging.level.org.springframework.web = TRACE
+logging.level.web=ERROR
+logging.level.org.springframework.web=ERROR
 
 
