--- a/mobile-app/build.gradle
+++ b/mobile-app/build.gradle
@@ -23,9 +23,11 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:2.7.0'
 	implementation 'io.springfox:springfox-swagger-ui:2.7.0'
 	
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+	/*testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	}*/
+	
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
