--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id 'org.springframework.boot' version '2.3.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
-	id 'war'
 }
 
 group = 'com.concretesolutions'
@@ -15,10 +14,17 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+}
+
+task copyJarToBin {
+    copy {
+        from 'build/libs/bff-initpage-0.0.1.jar'
+        into "docker/"
+        rename ('bff-initpage-0.0.1.jar','app.jar')
+    }
 }
 
 test {
