Se agrega circuit breaker, feign, retryer, swagger. Cambio en urls controller. Temporal de categorias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=8081
+
+feign.hystrix.enabled=true
+feign.client.config.default.connectTimeout= 4000
+feign.client.config.default.readTimeout=2000
+feign.client.config.default.retryer=com.accenture.test.matias.configuration.CustomRetryer
+feign.client.config.default.logger-level=full
+
+coupon-service.ribbon.listOfServers=https://cs-hsa-api-coupons.herokuapp.com
+coupon-service.ribbon.ConnectTimeout=3000
+coupon-service.ribbon.ReadTimeout=3000
+
+hystrix.command.default.execution.timeout.enabled=false
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
