--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ feign.client.config.default.readTimeout=2000
 feign.client.config.default.retryer=com.accenture.test.matias.configuration.CustomRetryer
 feign.client.config.default.logger-level=full
 
+category-service.ribbon.listOfServers=https://cs-hsa-api-categories.herokuapp.com
+category-service.ribbon.ConnectTimeout=3000
+category-service.ribbon.ReadTimeout=3000
+
 coupon-service.ribbon.listOfServers=https://cs-hsa-api-coupons.herokuapp.com
 coupon-service.ribbon.ConnectTimeout=3000
 coupon-service.ribbon.ReadTimeout=3000
