--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ feign.client.config.default.readTimeout=4000
 feign.client.config.default.retryer=com.accenture.test.matias.configuration.CustomRetryer
 feign.client.config.default.logger-level=full
 
+## Se puede especificar para cada cliente independientemeten ##
+#feign.client.config.coupon-service.connect-timeout=2000
+
 hystrix.command.default.execution.timeout.enabled=false
