Test y Servicio Categoria
se agrega dependencias al gradle para poder realizar Junit con Mockito,
adicionalmente se comienza a desarrollar el servicio de Categoria.
se agrega Swagger a restController

--- a/pruebamanuel/build.gradle
+++ b/pruebamanuel/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	compile group: 'io.github.resilience4j', name: 'resilience4j-ratelimiter', version: '1.1.0'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
 	compileOnly 'org.projectlombok:lombok'
+	testCompile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
+	testCompile group: 'org.mockito', name: 'mockito-core'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
