se crearon los servicios de coupons y categories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8081
 
+#management.security.enabled=false
+#security.basic.enabled=false
+#feign.hystrix.enabled=false
+
+api.url.categories=https://cs-hsa-api-categories.herokuapp.com
+api.url.coupons=https://cs-hsa-api-coupons.herokuapp.com
