--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,20 @@
 		    <artifactId>jersey-media-json-jackson</artifactId>
 		    <version>2.22</version>
 		</dependency>
+		
+		<!-- Swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		
 
 	</dependencies>
 
