--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,29 @@ plugins {
 }
 
 group = 'com.accenture'
-version = '0.1.0'
+version = '0.2.0'
 sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
 }
 
+ext['log4j2.version'] = '2.18.0'
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+	
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+}
+
+configurations {
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 }
 
 tasks.named('test') {
