--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,12 @@ plugins {
 }
 
 group = 'com.accenture'
-version = '0.2.0'
+version = '0.3.1'
 sourceCompatibility = '17'
+
+jar {
+    enabled = true
+}
 
 repositories {
 	mavenCentral()
@@ -17,6 +21,9 @@ ext['log4j2.version'] = '2.18.0'
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
