--- a/bff-recruiting-hsa/src/main/resources/application.properties
+++ b/bff-recruiting-hsa/src/main/resources/application.properties
@@ -24,5 +24,5 @@ feign.client.config.default.loggerLevel=basic
 server.port=8081
 
 ## Rest
-api.categorias.base=localhost:8080
+api.categoria.base=http://localhost:8080
 api.categoria.path.obtener=/challenge/categories
